Revision history for {{$dist->name}}

{{$NEXT}}
 [API CHANGES]

 [BUG FIXES]

 [DOCUMENTATION]

 [ENHANCEMENTS]
 - Added CPANFile
 - Added DOAP
 - Switch GatherDir for Git::GatherDir

 [NEW FEATURES]

 [STATISTICS]

0.20.0 2014-03-11
 [ENHANCEMENTS]
 - GitHub is now the default bug tracker.

 [STATISTICS]
 - code churn: 4 files changed, 20 insertions(+), 15 deletions(-)

0.19.0 2014-02-17
 [BUG FIXES]
 - Add a few forgotten dependencies.
 - Bump dependency for D::Z::P::Twitter.

 [NEW FEATURES]
 - Add 'tweet' flag.

 [STATISTICS]
 - code churn: 3 files changed, 59 insertions(+), 34 deletions(-)

0.18.3 2013-09-25
 [BUG FIXES]
 - Add 'multiple_inheritance' flag for dz::p::git::commitbuild.

 [STATISTICS]
 - code churn: 4 files changed, 37 insertions(+), 7 deletions(-)

0.18.2 2013-09-25
 [BUG FIXES]
 - Push both branches master and releases upon release.

 [STATISTICS]
 - code churn: 4 files changed, 25 insertions(+), 6 deletions(-)

0.18.1 2013-09-22
 [MISC]
 - Bump the dependency of Dist::Zilla::Plugin::Test::Compile to 2.033.

 [STATISTICS]
 - code churn: 4 files changed, 18 insertions(+), 4 deletions(-)

0.18.0 2013-05-02
 [BUG FIXES]
 - Push version dependencies out of the main module to allow  for
   bootstrapping.

 [ENHANCEMENTS]
 - Bump D::Z::P::ChangeStats::Git to v0.2.1.

 [STATISTICS]
 - code churn: 3 files changed, 16 insertions(+), 6 deletions(-)

0.17.0 2013-05-02
 [ENHANCEMENTS]
 - Move some plugins around to commit all changes to master after a
   release.
 - Up NextVersion::Semantic dependency to v0.1.2
 - Up ChangeStats::Git dependency

 [STATISTICS]
 - code churn: 2 files changed, 32 insertions(+), 19 deletions(-)

0.16.0 2013-03-18
 [ENHANCEMENTS]
 - Add DZP::ContributorsFromGit and DZP::ContributorsFile

0.15.0 2013-02-02
 [ENHANCEMENTS]
 - Use DZ::P::Twitter version 0.019 (now with twitter cards!)

 [STATISTICS]
 - code churn: 2 files changed, 14 insertions(+), 3 deletions(-)

0.14.0 2012-12-12
 [ENHANCEMENTS]
 - use ReportVersions::Tiny
