@@ -9,6 +9,7 @@ META.yml
 README
 README.mkdn
 SIGNATURE
+cpanfile
 doap.xml
 lib/Dist/Zilla/MintingProfile/Author/YANICK.pm
 lib/Dist/Zilla/Plugin/Author/YANICK/NextSemanticVersion.pm
