@@ -7,6 +7,7 @@ copyright_year   = 2010
 [Bootstrap::lib]
 
 [Prereqs]
+Dist::Zilla::Role::PluginBundle::Config::Slicer=0
 Dist::Zilla::Plugin::CPANFile = 0
 Dist::Zilla::Plugin::DOAP = 0
 Dist::Zilla::Plugin::ReadmeMarkdownFromPod = 0
