@@ -145,7 +145,10 @@ use strict;
 
 use Moose;
 
-with 'Dist::Zilla::Role::PluginBundle::Easy';
+with qw/
+    Dist::Zilla::Role::PluginBundle::Easy
+    Dist::Zilla::Role::PluginBundle::Config::Slicer
+/;
 
 has "doap_changelog" => (
     isa => 'Bool',
